--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Initial Angular CLI
-        run: npm install -g @angular/cli
+        run: npm install @angular/cli
       - name: Initial dependencies
         run: npm install
       - name: Lint code
